@@ -37,35 +37,35 @@
 			<div style="float: left; width: 48%;">
 				<table>
 					<tr>
-						<td valign="top"><img src="images/default/wspace.link.png" /></td>
+						<td valign="top"><img src="/images/default/wspace.link.png" /></td>
 						<td valign="top">This wormhole has not yet had its stability significantly disrupted.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/wspace.link.reduced.png" /></td>
+						<td valign="top"><img src="/images/default/wspace.link.reduced.png" /></td>
 						<td valign="top">This wormhole has had its stability reduced, but not to a critical degree yet.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/wspace.link.crit.png" /></td>
+						<td valign="top"><img src="/images/default/wspace.link.crit.png" /></td>
 						<td valign="top">This wormhole has had its stability critically disrupted and is on the verge of collapse.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/gate.link.png" /></td>
+						<td valign="top"><img src="/images/default/gate.link.png" /></td>
 						<td valign="top">These systems are not connected via wormholes but through normal jump gates.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/wspace.link.eol.png" /></td>
+						<td valign="top"><img src="/images/default/wspace.link.eol.png" /></td>
 						<td valign="top">This wormhole is reaching the end of its natural lifetime.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/wspace.link.capital.png" /></td>
+						<td valign="top"><img src="/images/default/wspace.link.capital.png" /></td>
 						<td valign="top">Capitals are able to jump through this wormhole.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/wspace.link.frigate.png" /></td>
+						<td valign="top"><img src="/images/default/wspace.link.frigate.png" /></td>
 						<td valign="top">Only Frigates and Destroyers can jump through this wormhole.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/default/kspace.link.png" /></td>
+						<td valign="top"><img src="/images/default/kspace.link.png" /></td>
 						<td valign="top">This wormhole links 2 kspace systems. The number indicates the amount of regular gate jumps.</td>
 					</tr>
 				</table>
@@ -73,39 +73,43 @@
 			<div style="float: right; width: 48%;">
 				<table>
 					<tr>
-						<td valign="top"><img src="images/eve/star.png" /></td>
+						<td valign="top"><img src="/images/eve/star.png" /></td>
 						<td valign="top">I currently have a pilot in this system.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/station.png" /></td>
+						<td valign="top"><img src="/images/eve/pin.png" /></td>
+						<td valign="top">This system persists when the map is cleared (<i>unles manually deleted).</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="/images/eve/station.png" /></td>
 						<td valign="top">This system has 1 or more stations.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/cyno.png" /></td>
+						<td valign="top"><img src="/images/eve/cyno.png" /></td>
 						<td valign="top">You have a registered capital ship in jump range of this system.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/stargate.red.png" /></td>
+						<td valign="top"><img src="/images/eve/stargate.red.png" /></td>
 						<td valign="top">This system is on a high-sec island!</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/stargate.green.png" /></td>
+						<td valign="top"><img src="/images/eve/stargate.green.png" /></td>
 						<td valign="top">This system has a direct gate to high-sec.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/fw.png" /></td>
+						<td valign="top"><img src="/images/eve/fw.png" /></td>
 						<td valign="top">This is a Factional Warfare system.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/fw.contested.png" /></td>
+						<td valign="top"><img src="/images/eve/fw.contested.png" /></td>
 						<td valign="top">This system is contested.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/skull.red.png" /></td>
+						<td valign="top"><img src="/images/eve/skull.red.png" /></td>
 						<td valign="top">This system has had PVP in the last 2 hours.</td>
 					</tr>
 					<tr>
-						<td valign="top"><img src="images/eve/skull.orange.png" /></td>
+						<td valign="top"><img src="/images/eve/skull.orange.png" /></td>
 						<td valign="top">This system has had PVE in the last 2 hours.</td>
 					</tr>
 					<tr>
@@ -133,14 +137,14 @@
 			</div>
 			<table>
 				<tr>
-					<td valign="top"><img src="images/default/legend/greybar-full.png">&nbsp;&nbsp;</td>
+					<td valign="top"><img src="/images/default/legend/greybar-full.png">&nbsp;&nbsp;</td>
 					<td valign="top">
 						<div><b><u>FULL BAR</u></b></div>
 						<div>This system has not been scanned.</div>
 					</td>
 				</tr>
 				<tr>
-					<td valign="top"><img src="images/default/legend/greybar-half.png">&nbsp;&nbsp;</td>
+					<td valign="top"><img src="/images/default/legend/greybar-half.png">&nbsp;&nbsp;</td>
 					<td valign="top">
 						<div><b><u>HALF BAR</u></b></div>
 						<div>This system was scanned, but it was more then 2 hours ago. New things may have popped up!</div>
@@ -152,28 +156,28 @@
 			<h3><u>System Outlines</u></h3>
 			<table>
 				<tr>
-					<td valign="top"><img src="images/default/legend/outline-blue.png">&nbsp;&nbsp;</td>
+					<td valign="top"><img src="/images/default/legend/outline-blue.png">&nbsp;&nbsp;</td>
 					<td valign="top">
 						<div><b><u>BLUE OUTLINE</u></b></div>
 						<div>Home system<br />This system is a home system on the current, or other chain.</div>
 					</td>
 				</tr>
 				<tr>
-					<td valign="top"><img src="images/default/legend/outline-green.png">&nbsp;&nbsp;</td>
+					<td valign="top"><img src="/images/default/legend/outline-green.png">&nbsp;&nbsp;</td>
 					<td valign="top">
 						<div><b><u>GREEN OUTLINE</u></b></div>
 						<div>This system is clear.<br />Nothing has been seen in this system.</div>
 					</td>
 				</tr>
 				<tr>
-					<td valign="top"><img src="images/default/legend/outline-yellow.png">&nbsp;&nbsp;</td>
+					<td valign="top"><img src="/images/default/legend/outline-yellow.png">&nbsp;&nbsp;</td>
 					<td valign="top">
 						<div><b><u>YELLOW OUTLINE</u></b></div>
 						<div>This system is inhabited!<br />This system has people, but they seem to be AFK.</div>
 					</td>
 				</tr>
 				<tr>
-					<td valign="top"><img src="images/default/legend/outline-red.png">&nbsp;&nbsp;</td>
+					<td valign="top"><img src="/images/default/legend/outline-red.png">&nbsp;&nbsp;</td>
 					<td valign="top">
 						<div><b><u>RED OUTLINE</u></b></div>
 						<div>This system is active!<br />Be carefull. Active ships have been seen in this system.</div>
